...
    'POL': 'Poland',
    'GRE': 'Greece',
    'DEN': 'Denmark',
    'BUL': 'Bulgaria',
    'GBR': 'United Kingdom Great Britain',
    'CAN': 'Canada',
    'FRA': 'France',
    'CHI': 'Chile',
    'ARG': 'Argentina',
    'CZE': 'Czech Republic Czechia',
    'KAZ': 'Kazakhstan',
    'JPN': 'Japan',
    'SUI': 'Switzerland',
    'BLR': 'Belarus',
    'CHN': 'China',
...
